force-app/main/default/objects/Exchange_Rates__c/Exchange_Rates__c.object-meta.xml
<CustomObject>
    <description>Exchange Rates on a Legal Entity.</description>
    <label>Exchange Rates</label>
    <nameField>
        <displayFormat>Fx-{0000}</displayFormat>
        <label>Exchange Rates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exchange Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>