force-app/main/default/objects/Exchange_Rates__c/fields/Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Date__c</fullName>
    <description>Conversion Date After which this Exchange Rate will be applied.</description>
    <label>Conversion Date</label>
    <type>Date</type>
</CustomField>