force-app/main/default/objects/Exchange_Rates__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <description>Conversion Rate.</description>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>13</scale>
    <type>Number</type>
</CustomField>