force-app/main/default/objects/Exchange_Rates__c/fields/From_Currency__c.field-meta.xml
<CustomField>
    <fullName>From_Currency__c</fullName>
    <description>Currency from which Amount is converted in &quot;To Currency&quot;.</description>
    <label>From Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>