force-app/main/default/objects/Exchange_Rates__c/fields/Inverse_Rate__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Rate__c</fullName>
    <description>TO to FROM Currency Conversion Rate.</description>
    <label>Inverse Rate</label>
    <precision>18</precision>
    <scale>13</scale>
    <type>Number</type>
</CustomField>