force-app/main/default/objects/Exchange_Rates__c/fields/To_Currency__c.field-meta.xml
<CustomField>
    <fullName>To_Currency__c</fullName>
    <description>TO Currency in which Amount is going to be converted from &quot;FROM Currency&quot;.</description>
    <label>To Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>