force-app/main/default/objects/Exchange_Rates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Currency__c</columns>
    <columns>To_Currency__c</columns>
    <columns>Conversion_Date__c</columns>
    <columns>Conversion_Rate__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>